# 0db

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/controllers/: file_controller.cpp  file_controller.hpp  track_controller.cpp  track_controller.hpp
src/models/: track_item.cpp  track_item.hpp  track_source.cpp  track_source.hpp
src/views/: file_list_pane.cpp  file_list_pane.hpp  main_window_view.cpp  main_window_view.hpp  track_list_pane.cpp  track_list_pane.hpp
ui/: main_window.ui
